--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,30 +11,45 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="js/jquery.slicknav.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function(){
-            $('#nav_menu').slicknav({prependTo:"#mobile_menu"});
+        $(document).ready(function() {
+            $('#nav_menu').slicknav({
+                prependTo: "#mobile_menu"
+            });
         });
     </script>
+    <link rel="stylesheet" href="css/product.css">
 </head>
+
 <body>
     <header>
     </header>
     <nav id="mobile_menu"></nav>
-	<nav id="nav_menu">
-    	<ul>
-        	<li><a href="index.html" class="current">Home</a></li>
-        	<li><a href="speakers.html">Speakers</a></li>
-        	<li><a href="luncheons.html">Luncheons</a></li>
-        	<li><a href="tickets.html">Tickets</a></li>
-        	<li><a href="aboutus.html"> About Us</a>
-            	<ul>
-                	<li><a href="#">Our History</a></li>
-                	<li><a href="#">Board of Directors</a></li>
-                	<li><a href="#">Past Speakers</a></li>
-                	<li><a href="#">Contact Information</a></li>
-            	</ul>
-        	</li>
-    	</ul>
-	</nav>
+    <nav id="nav_menu">
+        <ul>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="speakers.html">Speakers</a></li>
+            <li><a href="luncheons.html">Luncheons</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="aboutus.html"> About Us</a>
+                <ul>
+                    <li><a href="#">Our History</a></li>
+                    <li><a href="#">Board of Directors</a></li>
+                    <li><a href="#">Past Speakers</a></li>
+                    <li><a href="#">Contact Information</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <div class="product">
+            <div class="top">
+                <img src="images/PHP-logo-1.jpg" alt="">
+            </div>
+            <div class="bottom">
+                <h4>Kiểm thử phần mềm</h4>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
